test: fix dependencies so as unit tests can be run in JDK11+